# openwebrtc-gst-plugins

./: .sources_installed_tag_file.txt  LICENSE  Makefile.am  README.md  TODO  autogen.sh  configure.ac  gstreamer-sctp-1.0-uninstalled.pc.in  gstreamer-sctp-1.0.pc.in
ext/: Makefile.am
ext/erdtls/: Makefile.am
ext/erdtls/src/: erdtlsagent.c  erdtlsagent.h  erdtlscertificate.c  erdtlscertificate.h  erdtlscommon.h  erdtlsconnection.c  erdtlsconnection.h  gsterdtlsdec.c  gsterdtlsdec.h  gsterdtlsenc.c  gsterdtlsenc.h  gsterdtlssrtpbin.c  gsterdtlssrtpbin.h  gsterdtlssrtpdec.c  gsterdtlssrtpdec.h  gsterdtlssrtpdemux.c  gsterdtlssrtpdemux.h  gsterdtlssrtpenc.c  gsterdtlssrtpenc.h  plugin.c
ext/openh264/: Makefile.am
ext/openh264/src/: Makefile.am  gstopenh264dec.cpp  gstopenh264enc.cpp  gstopenh264plugin.c
ext/sctp/: Makefile.am  gstsctpdec.c  gstsctpdec.h  gstsctpenc.c  gstsctpenc.h  gstsctpplugin.c  sctpassociation.c  sctpassociation.h
gst/: Makefile.am
gst-libs/: Makefile.am
gst-libs/gst/: Makefile.am
gst-libs/gst/sctp/: Makefile.am  sctpreceivemeta.c  sctpreceivemeta.h  sctpsendmeta.c  sctpsendmeta.h
gst/ercolorspace/: Makefile.am  configure.ac
gst/ercolorspace/src/: gstercolorspace.c  gstercolorspace.h  gstercolorspace_neon.h  gstercolorspace_neon.s
gst/scream/: Makefile.am  gstscreamcontroller.c  gstscreamcontroller.h  gstscreamplugin.c  gstscreamqueue.c  gstscreamqueue.h
gst/videorepair/: Makefile.am  gstvideorepair.c  gstvideorepair.h
sys/: Makefile.am
sys/androidvideo/: Makefile.am
sys/androidvideo/video-source/: Makefile.am
sys/androidvideo/video-source/jni/: Android.mk  android_video_capture_device.c  gst_android_video_source.c  jni_utils.c
sys/androidvideo/video-source/jni/include/: android_video_capture_device.h  android_video_capture_device_android_definitions.h  android_video_capture_device_definitions.h  android_video_capture_device_errors.h  gst_android_video_source.h  gst_android_video_source_common.h  gst_android_video_source_config.h  gst_android_video_source_log.h  jni_utils.h
sys/androidvideo/video-source/src/com/ericsson/gstreamer/: VideoCaptureDevicePreviewCallbackHandler.java
